# mysql_mcp_server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  MCP_USECASES.md  README.md  SECURITY.md  mysql-mcp-server.mcpb  package-lock.json  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: test.yml
src/mysql_mcp_server/: .env.example  __main__.py  server.py
tests/: conftest.py  test_formatting.py  test_server.py
